updated row styling to fix issue with centering. made mini-window more readable on mobile devices

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -226,6 +226,7 @@ html, body {
 
 .about-text {
     display: flex;
+    margin: 0;
 }
 
 .profile-image {
